# pywebp

./: .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  build.py  build_manylinux_wheels.sh  circle.yml  conan_profile  conanfile.py  conanfile.txt  conda-lock.yml  docker-compose.yml  environment.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.circleci/: config.yml
.github/workflows/: build_and_test.yml  run_tests.yml
scripts/: clean.sh  release.sh  test.sh
tests/: conftest.py  test_webp.py  test_webp_config.py
webp/: __init__.py  webp_build.py
webp_build/: __init__.py  builder.py  cdef.h  source.c
