[project]
name = "webp"
version = "0.4.0"
description = "Python bindings for WebP"
readme = { content-type = "text/markdown", file = "README.md" }
authors = [{ name = "Aiden Nibali", email = "dismaldenizen@gmail.com" }]
requires-python = ">=3.8"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "Pillow>=4.0.0",
    "cffi>=1.12",
    "numpy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/anibali/pywebp"

[dependency-groups]
test = [
    "pytest",
]
dev = [
    "build>=1.0.0",
    "cmake>=3.5",
    "conan>=2.0",
    "ruff>=0.15.16",
    "setuptools>=45",
    "twine",
    "ty>=0.0.40",
]

[build-system]
requires = [
    "cffi>=1.12",
    "cmake>=3.5",
    "conan>=2.0",
    "setuptools>=45",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["webp"]

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812", # missing-trailing-comma conflicts with ruff format.
    "ISC001", # single-line-implicit-string-concatenation conflicts with ruff format.
    "FA", # do not require from __future__ import annotations.

    # Existing codebase cleanup deferred after running safe autofixes.
    "D", # docstring coverage/style.
]

[tool.ruff.lint.per-file-ignores]
"conanfile.py" = ["S101"]
"tests/**/*.py" = ["PLR2004", "S101"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"__future__.annotations" = { msg = "Do not use `from __future__ import annotations`; keep annotations explicit." }
