[metadata]
name = webp
version = 0.1.3
description = Python bindings for WebP
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/anibali/pywebp
author = Aiden Nibali
project_urls =
    Source=https://github.com/anibali/pywebp
    Issues=https://github.com/anibali/pywebp/issues
classifiers =
    Programming Language :: Python :: 3 :: Only
    Topic :: Multimedia :: Graphics :: Graphics Conversion
    License :: OSI Approved :: MIT License

[options]
python_requires = >=3.6
zip_safe = True
packages = find:
test_suite = tests
setup_requires =
    setuptools
    wheel
    cffi>=1.0.0
    conan>=1.8.0
    importlib_resources>=1.0.0
install_requires =
    cffi>=1.0.0
    Pillow>=4.0.0
    numpy>=1.0.0

[options.packages.find]
include =
    webp
    webp.*
    webp_build

[options.package_data]
webp_build = *.h, *.c
